Add tolerance adjust in config

--- a/src/config.ui
+++ b/src/config.ui
@@ -71,7 +71,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab1">
       <attribute name="title">
@@ -102,7 +102,7 @@
            <set>Qt::ImhNone</set>
           </property>
           <property name="text">
-           <string/>
+           <string>100</string>
           </property>
           <property name="placeholderText">
            <string>100</string>
