--- a/src/config.ui
+++ b/src/config.ui
@@ -77,7 +77,7 @@
       <attribute name="title">
        <string>Simulation</string>
       </attribute>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -92,7 +92,7 @@
         </property>
         <item>
          <widget class="QWidget" name="widget_2" native="true">
-          <widget class="QWidget" name="">
+          <widget class="QWidget" name="layoutWidget">
            <property name="geometry">
             <rect>
              <x>0</x>
@@ -186,7 +186,7 @@
         </item>
         <item>
          <widget class="QWidget" name="widget_3" native="true">
-          <widget class="QWidget" name="">
+          <widget class="QWidget" name="layoutWidget">
            <property name="geometry">
             <rect>
              <x>0</x>
@@ -322,7 +322,7 @@
                </sizepolicy>
               </property>
               <property name="minimum">
-               <double>1.000000000000000</double>
+               <double>0.010000000000000</double>
               </property>
               <property name="maximum">
                <double>1000000000000.000000000000000</double>
@@ -344,7 +344,7 @@
         </item>
         <item>
          <widget class="QWidget" name="widget_6" native="true">
-          <widget class="QWidget" name="">
+          <widget class="QWidget" name="layoutWidget">
            <property name="geometry">
             <rect>
              <x>0</x>
@@ -401,7 +401,7 @@
         </item>
         <item>
          <widget class="QWidget" name="widget_5" native="true">
-          <widget class="QWidget" name="">
+          <widget class="QWidget" name="layoutWidget">
            <property name="geometry">
             <rect>
              <x>0</x>
