--- a/src/report/htmlreport/templates/inherit.html
+++ b/src/report/htmlreport/templates/inherit.html
@@ -67,3 +67,168 @@
   </tbody>
 </table>
 {% endblock %}
+
+{% block lefttail %}
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th>Frequency/Hz (Smaller than)</th>
+      <th>Probability</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>65.03355474286874</td>
+      <td>0.060</td>
+    </tr>
+    <tr>
+      <td>65.03327291427165</td>
+      <td>0.050</td>
+    </tr>
+    <tr>
+      <td>65.03011610031447</td>
+      <td>0.040</td>
+    </tr>
+    <tr>
+      <td>65.02876575104503</td>
+      <td>0.030</td>
+    </tr>
+    <tr>
+      <td>65.02845374927224</td>
+      <td>0.020</td>
+    </tr>
+    <tr>
+      <td>65.02741031473144</td>
+      <td>0.010</td>
+    </tr>
+    <tr>
+      <td>65.02425882085527</td>
+      <td>0.008</td>
+    </tr>
+    <tr>
+      <td>65.02408525318486</td>
+      <td>0.006</td>
+    </tr>
+    <tr>
+      <td>65.02383688807316</td>
+      <td>0.004</td>
+    </tr>
+    <tr>
+      <td>65.02135125802555</td>
+      <td>0.002</td>
+    </tr>
+  </tbody>
+</table>
+{% endblock %}
+
+{% block righttail %}
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th>Frequency/Hz (Larger than)</th>
+      <th>Probability</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>65.06646687306507</td>
+      <td>0.060</td>
+    </tr>
+    <tr>
+      <td>65.06699232711573</td>
+      <td>0.050</td>
+    </tr>
+    <tr>
+      <td>65.06836470147073</td>
+      <td>0.040</td>
+    </tr>
+    <tr>
+      <td>65.07153242306931</td>
+      <td>0.030</td>
+    </tr>
+    <tr>
+      <td>65.07856180961574</td>
+      <td>0.020</td>
+    </tr>
+    <tr>
+      <td>65.07864937000265</td>
+      <td>0.010</td>
+    </tr>
+    <tr>
+      <td>65.07967675818365</td>
+      <td>0.008</td>
+    </tr>
+    <tr>
+      <td>65.07971938838743</td>
+      <td>0.006</td>
+    </tr>
+    <tr>
+      <td>65.07991722910442</td>
+      <td>0.004</td>
+    </tr>
+    <tr>
+      <td>65.08392462045576</td>
+      <td>0.002</td>
+    </tr>
+  </tbody>
+</table>
+{% endblock %}
+
+{% block wsttable %}
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: center;">
+      <th></th>
+      <th>Left</th>
+      <th>Right</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Frequency</td>
+      <td>6.500254e+01</td>
+      <td>6.509930e+01</td>
+    </tr>
+    <tr>
+      <td>c1</td>
+      <td>1.900000e-09</td>
+      <td>2.100000e-09</td>
+    </tr>
+    <tr>
+      <td>c10</td>
+      <td>1.050000e-09</td>
+      <td>9.500000e-10</td>
+    </tr>
+    <tr>
+      <td>c2</td>
+      <td>1.050000e-09</td>
+      <td>9.500000e-10</td>
+    </tr>
+    <tr>
+      <td>r1</td>
+      <td>1.131200e+04</td>
+      <td>1.108800e+04</td>
+    </tr>
+    <tr>
+      <td>r10</td>
+      <td>1.605900e+04</td>
+      <td>1.574100e+04</td>
+    </tr>
+    <tr>
+      <td>r2</td>
+      <td>1.131200e+04</td>
+      <td>1.108800e+04</td>
+    </tr>
+    <tr>
+      <td>ra</td>
+      <td>9.900000e+07</td>
+      <td>9.900000e+07</td>
+    </tr>
+    <tr>
+      <td>rb</td>
+      <td>1.010000e+00</td>
+      <td>9.900000e-01</td>
+    </tr>
+  </tbody>
+</table>
+{% endblock %}
