--- a/src/report/htmlreport/templates/base.html
+++ b/src/report/htmlreport/templates/base.html
@@ -50,7 +50,7 @@
     {% endblock %}
 
     <h2>Result</h2>
-    AC analysis command: ac dec 40 10 100<br>
+    AC analysis command: ac dec 40 {{freq}}<br>
     Running time: {{mc_runs}}<br>
     Measure port: {{port}}<br>
     Standard cutoff frequency: {{std}} Hz<br>
