--- a/src/report/htmlreport/templates/base.html
+++ b/src/report/htmlreport/templates/base.html
@@ -38,6 +38,7 @@
 
 <body>
     <h1>{{title}} Tolerance Analysis Report</h1>
+    <p style="text-align:center;margin-top:-15px;">Creation date: {{date}}</p>
     <h2>Component</h2>
     <p style="text-align:center;margin-bottom:1px;">{{cnumber}}</p>
     {% block ctable %}
