--- a/src/report/htmlreport/templates/report.html
+++ b/src/report/htmlreport/templates/report.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <style>
-   h1 {
+
+<head>
+    <style>
+        h1 {
             text-align: center;
         }
 
@@ -31,478 +32,260 @@
             margin-left: auto;
             margin-right: auto;
         }
-  </style>
-  <title>
-   Sallen.cir report
-  </title>
- </head>
- <body>
-  <h1>
-   Sallen.cir Tolerance Analysis Report
-  </h1>
-  <p style="text-align:center;margin-top:-15px;">
-   Creation date: 16/07/2021 16:26:57 UTC
-  </p>
-  <h2>
-   Component
-  </h2>
-  <p style="text-align:center;margin-bottom:1px;">
-   3 Capacitors
-  </p>
-  <table border="1" class="dataframe">
-   <thead>
+    </style>
+    <title>Sallen.cir report</title>
+</head>
+
+<body>
+    <h1>Sallen.cir Tolerance Analysis Report</h1>
+    <p style="text-align:center;margin-top:-15px;">Creation date: 16/07/2021 19:07:52 UTC</p>
+    <h2>Component</h2>
+    <p style="text-align:center;margin-bottom:1px;">3 Capacitors</p>
+    
+<table border="1" class="dataframe">
+  <thead>
     <tr style="text-align: right;">
-     <th>
-      Name
-     </th>
-     <th>
-      Value/F
-     </th>
-     <th>
-      Tolerance
-     </th>
+      <th>Name</th>
+      <th>Value/F</th>
+      <th>Tolerance</th>
     </tr>
-   </thead>
-   <tbody>
+  </thead>
+  <tbody>
     <tr>
-     <td>
-      c1
-     </td>
-     <td>
-      2e-09
-     </td>
-     <td>
-      0.05
-     </td>
+      <td>c1</td>
+      <td>2e-09</td>
+      <td>0.05</td>
     </tr>
     <tr>
-     <td>
-      c10
-     </td>
-     <td>
-      1e-09
-     </td>
-     <td>
-      0.05
-     </td>
+      <td>c10</td>
+      <td>1e-09</td>
+      <td>0.05</td>
     </tr>
     <tr>
-     <td>
-      c2
-     </td>
-     <td>
-      1e-09
-     </td>
-     <td>
-      0.05
-     </td>
+      <td>c2</td>
+      <td>1e-09</td>
+      <td>0.05</td>
     </tr>
-   </tbody>
-  </table>
-  <p style="text-align:center;margin-bottom:1px;">
-   5 Resistors
-  </p>
-  <table border="1" class="dataframe">
-   <thead>
+  </tbody>
+</table>
+
+
+    <p style="text-align:center;margin-bottom:1px;">5 Resistors</p>
+    
+<table border="1" class="dataframe">
+  <thead>
     <tr style="text-align: right;">
-     <th>
-      Name
-     </th>
-     <th>
-      Value/Ω
-     </th>
-     <th>
-      Tolerance
-     </th>
+      <th>Name</th>
+      <th>Value/Ω</th>
+      <th>Tolerance</th>
     </tr>
-   </thead>
-   <tbody>
+  </thead>
+  <tbody>
     <tr>
-     <td>
-      r1
-     </td>
-     <td>
-      11200
-     </td>
-     <td>
-      0.01
-     </td>
+      <td>r1</td>
+      <td>11200</td>
+      <td>0.01</td>
     </tr>
     <tr>
-     <td>
-      r10
-     </td>
-     <td>
-      15900
-     </td>
-     <td>
-      0.01
-     </td>
+      <td>r10</td>
+      <td>15900</td>
+      <td>0.01</td>
     </tr>
     <tr>
-     <td>
-      r2
-     </td>
-     <td>
-      11200
-     </td>
-     <td>
-      0.01
-     </td>
+      <td>r2</td>
+      <td>11200</td>
+      <td>0.01</td>
     </tr>
     <tr>
-     <td>
-      ra
-     </td>
-     <td>
-      1e+08
-     </td>
-     <td>
-      0.01
-     </td>
+      <td>ra</td>
+      <td>1e+08</td>
+      <td>0.01</td>
     </tr>
     <tr>
-     <td>
-      rb
-     </td>
-     <td>
-      1
-     </td>
-     <td>
-      0.01
-     </td>
+      <td>rb</td>
+      <td>1</td>
+      <td>0.01</td>
     </tr>
-   </tbody>
-  </table>
-  <h2>
-   Result
-  </h2>
-  AC analysis command: ac dec 40 10 100
-  <br/>
-  Running time: 800
-  <br/>
-  Measure port: out
-  <br/>
-  Standard cutoff frequency: 65.05133 Hz
-  <br/>
-  Acceptable tolerance of cutoff frequency: 0.01
-  <br/>
-  Acceptable lowest yield: 0.98
-  <br/>
-  <p>
-   This circuit design is acceptable. The estimated yield from simulation is 1.
-  </p>
-  <p style="text-align:center;margin-bottom:1px;">
-   Left Tail Probability Table
-  </p>
-  <table border="1" class="dataframe">
-   <thead>
+  </tbody>
+</table>
+
+
+    <h2>Result</h2>
+    AC analysis command: ac dec 40 10 100<br>
+    Running time: 800<br>
+    Measure port: out<br>
+    Standard cutoff frequency: 65.05133 Hz<br>
+    Acceptable tolerance of cutoff frequency: 0.01<br>
+    Acceptable lowest yield: 0.98<br>
+
+    <p>This circuit design is acceptable. The estimated yield from simulation is 1.</p>
+    <p style="text-align:center;margin-bottom:1px;">Left Tail Probability Table</p>
+    
+<table border="1" class="dataframe">
+  <thead>
     <tr style="text-align: right;">
-     <th>
-      Frequency/Hz (Smaller than)
-     </th>
-     <th>
-      Probability
-     </th>
+      <th>Frequency/Hz (Smaller than)</th>
+      <th>Probability</th>
     </tr>
-   </thead>
-   <tbody>
+  </thead>
+  <tbody>
     <tr>
-     <td>
-      65.03116741302941
-     </td>
-     <td>
-      0.060
-     </td>
+      <td>65.03392073909083</td>
+      <td>0.060</td>
     </tr>
     <tr>
-     <td>
-      65.03116354229935
-     </td>
-     <td>
-      0.050
-     </td>
+      <td>65.03337069255439</td>
+      <td>0.050</td>
     </tr>
     <tr>
-     <td>
-      65.03114837078914
-     </td>
-     <td>
-      0.040
-     </td>
+      <td>65.03146024566007</td>
+      <td>0.040</td>
     </tr>
     <tr>
-     <td>
-      65.03111328655254
-     </td>
-     <td>
-      0.030
-     </td>
+      <td>65.03142292683019</td>
+      <td>0.030</td>
     </tr>
     <tr>
-     <td>
-      65.02721665056629
-     </td>
-     <td>
-      0.020
-     </td>
+      <td>65.03044176979914</td>
+      <td>0.020</td>
     </tr>
     <tr>
-     <td>
-      65.02255489354248
-     </td>
-     <td>
-      0.010
-     </td>
+      <td>65.02620404093283</td>
+      <td>0.010</td>
     </tr>
     <tr>
-     <td>
-      65.02255247696279
-     </td>
-     <td>
-      0.008
-     </td>
+      <td>65.02314057336365</td>
+      <td>0.008</td>
     </tr>
     <tr>
-     <td>
-      65.02254093509399
-     </td>
-     <td>
-      0.006
-     </td>
+      <td>65.01982636602153</td>
+      <td>0.006</td>
     </tr>
     <tr>
-     <td>
-      65.018455799788
-     </td>
-     <td>
-      0.004
-     </td>
+      <td>65.0197867160578</td>
+      <td>0.004</td>
     </tr>
     <tr>
-     <td>
-      65.01844982501792
-     </td>
-     <td>
-      0.002
-     </td>
+      <td>65.01974468848981</td>
+      <td>0.002</td>
     </tr>
-   </tbody>
-  </table>
-  <p style="text-align:center;margin-bottom:1px;">
-   Right Tail Probability Table
-  </p>
-  <table border="1" class="dataframe">
-   <thead>
+  </tbody>
+</table>
+
+
+    <p style="text-align:center;margin-bottom:1px;">Right Tail Probability Table</p>
+    
+<table border="1" class="dataframe">
+  <thead>
     <tr style="text-align: right;">
-     <th>
-      Frequency/Hz (Larger than)
-     </th>
-     <th>
-      Probability
-     </th>
+      <th>Frequency/Hz (Larger than)</th>
+      <th>Probability</th>
     </tr>
-   </thead>
-   <tbody>
+  </thead>
+  <tbody>
     <tr>
-     <td>
-      65.06782884367666
-     </td>
-     <td>
-      0.060
-     </td>
+      <td>65.07319747782839</td>
+      <td>0.060</td>
     </tr>
     <tr>
-     <td>
-      65.0690495415226
-     </td>
-     <td>
-      0.050
-     </td>
+      <td>65.0732087855211</td>
+      <td>0.050</td>
     </tr>
     <tr>
-     <td>
-      65.0706730026922
-     </td>
-     <td>
-      0.040
-     </td>
+      <td>65.07320996527905</td>
+      <td>0.040</td>
     </tr>
     <tr>
-     <td>
-      65.07223478546622
-     </td>
-     <td>
-      0.030
-     </td>
+      <td>65.07321151996221</td>
+      <td>0.030</td>
     </tr>
     <tr>
-     <td>
-      65.072890744001
-     </td>
-     <td>
-      0.020
-     </td>
+      <td>65.07584595151283</td>
+      <td>0.020</td>
     </tr>
     <tr>
-     <td>
-      65.075345612475
-     </td>
-     <td>
-      0.010
-     </td>
+      <td>65.07586650330019</td>
+      <td>0.010</td>
     </tr>
     <tr>
-     <td>
-      65.07589565085416
-     </td>
-     <td>
-      0.008
-     </td>
+      <td>65.07969726145393</td>
+      <td>0.008</td>
     </tr>
     <tr>
-     <td>
-      65.07714668458769
-     </td>
-     <td>
-      0.006
-     </td>
+      <td>65.08085803691084</td>
+      <td>0.006</td>
     </tr>
     <tr>
-     <td>
-      65.07972503355381
-     </td>
-     <td>
-      0.004
-     </td>
+      <td>65.08135975549914</td>
+      <td>0.004</td>
     </tr>
     <tr>
-     <td>
-      65.08049957771851
-     </td>
-     <td>
-      0.002
-     </td>
+      <td>65.08137130938901</td>
+      <td>0.002</td>
     </tr>
-   </tbody>
-  </table>
-  <p style="text-align:center;margin-bottom:1px;">
-   Worst Case Table
-  </p>
-  <table border="1" class="dataframe">
-   <thead>
+  </tbody>
+</table>
+
+
+    <p style="text-align:center;margin-bottom:1px;">Worst Case Table</p>
+    
+<table border="1" class="dataframe">
+  <thead>
     <tr style="text-align: center;">
-     <th>
-     </th>
-     <th>
-      Left
-     </th>
-     <th>
-      Right
-     </th>
+      <th></th>
+      <th>Left</th>
+      <th>Right</th>
     </tr>
-   </thead>
-   <tbody>
+  </thead>
+  <tbody>
     <tr>
-     <td>
-      Frequency
-     </td>
-     <td>
-      6.500254e+01
-     </td>
-     <td>
-      6.509930e+01
-     </td>
+      <td>Frequency</td>
+      <td>6.500254e+01</td>
+      <td>6.509930e+01</td>
     </tr>
     <tr>
-     <td>
-      c1
-     </td>
-     <td>
-      1.900000e-09
-     </td>
-     <td>
-      2.100000e-09
-     </td>
+      <td>c1</td>
+      <td>1.900000e-09</td>
+      <td>2.100000e-09</td>
     </tr>
     <tr>
-     <td>
-      c10
-     </td>
-     <td>
-      1.050000e-09
-     </td>
-     <td>
-      9.500000e-10
-     </td>
+      <td>c10</td>
+      <td>1.050000e-09</td>
+      <td>9.500000e-10</td>
     </tr>
     <tr>
-     <td>
-      c2
-     </td>
-     <td>
-      1.050000e-09
-     </td>
-     <td>
-      9.500000e-10
-     </td>
+      <td>c2</td>
+      <td>1.050000e-09</td>
+      <td>9.500000e-10</td>
     </tr>
     <tr>
-     <td>
-      r1
-     </td>
-     <td>
-      1.131200e+04
-     </td>
-     <td>
-      1.108800e+04
-     </td>
+      <td>r1</td>
+      <td>1.131200e+04</td>
+      <td>1.108800e+04</td>
     </tr>
     <tr>
-     <td>
-      r10
-     </td>
-     <td>
-      1.605900e+04
-     </td>
-     <td>
-      1.574100e+04
-     </td>
+      <td>r10</td>
+      <td>1.605900e+04</td>
+      <td>1.574100e+04</td>
     </tr>
     <tr>
-     <td>
-      r2
-     </td>
-     <td>
-      1.131200e+04
-     </td>
-     <td>
-      1.108800e+04
-     </td>
+      <td>r2</td>
+      <td>1.131200e+04</td>
+      <td>1.108800e+04</td>
     </tr>
     <tr>
-     <td>
-      ra
-     </td>
-     <td>
-      9.900000e+07
-     </td>
-     <td>
-      9.900000e+07
-     </td>
+      <td>ra</td>
+      <td>9.900000e+07</td>
+      <td>9.900000e+07</td>
     </tr>
     <tr>
-     <td>
-      rb
-     </td>
-     <td>
-      1.010000e+00
-     </td>
-     <td>
-      9.900000e-01
-     </td>
+      <td>rb</td>
+      <td>1.010000e+00</td>
+      <td>9.900000e-01</td>
     </tr>
-   </tbody>
-  </table>
- </body>
+  </tbody>
+</table>
+
+</body>
+
 </html>
