--- a/src/report/htmlreport/templates/report.html
+++ b/src/report/htmlreport/templates/report.html
@@ -41,7 +41,7 @@
    Sallen.cir Tolerance Analysis Report
   </h1>
   <p style="text-align:center;margin-top:-15px;">
-   Creation date: 18/07/2021 14:50:51 UTC
+   Creation date: 18/07/2021 21:19:59 UTC
   </p>
   <h2>
    Component
@@ -183,7 +183,7 @@
   <br/>
   Measure port: out
   <br/>
-  Standard cutoff frequency: 65.05133 Hz
+  Standard cutoff frequency: 2.90803111 Hz
   <br/>
   Acceptable tolerance of cutoff frequency: 0.01
   <br/>
@@ -209,7 +209,7 @@
    <tbody>
     <tr>
      <td>
-      65.03556950479788
+      2.9065311060984484
      </td>
      <td>
       0.060
@@ -217,7 +217,7 @@
     </tr>
     <tr>
      <td>
-      65.03441278186668
+      2.906448993827375
      </td>
      <td>
       0.050
@@ -225,7 +225,7 @@
     </tr>
     <tr>
      <td>
-      65.0332850524398
+      2.9063375113884464
      </td>
      <td>
       0.040
@@ -233,7 +233,7 @@
     </tr>
     <tr>
      <td>
-      65.03189860619996
+      2.9061336983800925
      </td>
      <td>
       0.030
@@ -241,7 +241,7 @@
     </tr>
     <tr>
      <td>
-      65.03112172953654
+      2.905807797601015
      </td>
      <td>
       0.020
@@ -249,7 +249,7 @@
     </tr>
     <tr>
      <td>
-      65.02882810236927
+      2.905471838381833
      </td>
      <td>
       0.010
@@ -257,7 +257,7 @@
     </tr>
     <tr>
      <td>
-      65.02880037858635
+      2.9054650410685032
      </td>
      <td>
       0.008
@@ -265,7 +265,7 @@
     </tr>
     <tr>
      <td>
-      65.02676050598913
+      2.9053893874507244
      </td>
      <td>
       0.006
@@ -273,7 +273,7 @@
     </tr>
     <tr>
      <td>
-      65.02204910826529
+      2.905204707657891
      </td>
      <td>
       0.004
@@ -281,7 +281,7 @@
     </tr>
     <tr>
      <td>
-      65.01693418373426
+      2.9052019492767114
      </td>
      <td>
       0.002
@@ -306,7 +306,7 @@
    <tbody>
     <tr>
      <td>
-      65.07247663254086
+      2.909514750003393
      </td>
      <td>
       0.060
@@ -314,7 +314,7 @@
     </tr>
     <tr>
      <td>
-      65.07470356379315
+      2.90954264169499
      </td>
      <td>
       0.050
@@ -322,7 +322,7 @@
     </tr>
     <tr>
      <td>
-      65.07472577050297
+      2.9097661384700277
      </td>
      <td>
       0.040
@@ -330,7 +330,7 @@
     </tr>
     <tr>
      <td>
-      65.07503831026268
+      2.9098560061540053
      </td>
      <td>
       0.030
@@ -338,7 +338,7 @@
     </tr>
     <tr>
      <td>
-      65.07504054114979
+      2.9100611033772408
      </td>
      <td>
       0.020
@@ -346,7 +346,7 @@
     </tr>
     <tr>
      <td>
-      65.07504151649756
+      2.9101022463626123
      </td>
      <td>
       0.010
@@ -354,7 +354,7 @@
     </tr>
     <tr>
      <td>
-      65.07504326086155
+      2.9103427419830887
      </td>
      <td>
       0.008
@@ -362,7 +362,7 @@
     </tr>
     <tr>
      <td>
-      65.07504599795851
+      2.910515566402175
      </td>
      <td>
       0.006
@@ -370,7 +370,7 @@
     </tr>
     <tr>
      <td>
-      65.07504995150528
+      2.9106812451951547
      </td>
      <td>
       0.004
@@ -378,7 +378,7 @@
     </tr>
     <tr>
      <td>
-      65.08142055484394
+      2.9107904543243426
      </td>
      <td>
       0.002
@@ -408,10 +408,10 @@
       Frequency
      </td>
      <td>
-      6.500254e+01
+      2.904338e+00
      </td>
      <td>
-      6.509930e+01
+      2.911658e+00
      </td>
     </tr>
     <tr>
@@ -419,10 +419,10 @@
       c1
      </td>
      <td>
-      1.900000e-09
+      2.100000e-09
      </td>
      <td>
-      2.100000e-09
+      1.900000e-09
      </td>
     </tr>
     <tr>
@@ -441,10 +441,10 @@
       c2
      </td>
      <td>
-      1.050000e-09
+      9.500000e-10
      </td>
      <td>
-      9.500000e-10
+      1.050000e-09
      </td>
     </tr>
     <tr>
@@ -463,7 +463,7 @@
       r10
      </td>
      <td>
-      1.605900e+04
+      1.574100e+04
      </td>
      <td>
       1.574100e+04
@@ -474,7 +474,7 @@
       r2
      </td>
      <td>
-      1.131200e+04
+      1.108800e+04
      </td>
      <td>
       1.108800e+04
@@ -496,7 +496,7 @@
       rb
      </td>
      <td>
-      1.010000e+00
+      9.900000e-01
      </td>
      <td>
       9.900000e-01
