--- a/src/main.ui
+++ b/src/main.ui
@@ -112,7 +112,7 @@
         <item row="1" column="0" colspan="2">
          <widget class="QLabel" name="totaltime">
           <property name="text">
-           <string>Total Simulation Time:</string>
+           <string>Total Simulation Time: 0</string>
           </property>
          </widget>
         </item>
@@ -152,7 +152,7 @@
             <height>0</height>
            </size>
           </property>
-          <widget class="QWidget" name="">
+          <widget class="QWidget" name="layoutWidget">
            <property name="geometry">
             <rect>
              <x>0</x>
