--- a/src/report/htmlreport/templates/report.html
+++ b/src/report/htmlreport/templates/report.html
@@ -41,7 +41,7 @@
    Sallen.cir Tolerance Analysis Report
   </h1>
   <p style="text-align:center;margin-top:-15px;">
-   Creation date: 23/07/2021 16:38:15 UTC
+   Creation date: 24/07/2021 17:00:34 UTC
   </p>
   <h2>
    Component
@@ -179,18 +179,18 @@
   </h2>
   AC analysis command: ac dec 40 10 100
   <br/>
-  Running time: 3003
+  Running time: 1800
   <br/>
   Measure port: out
   <br/>
-  Standard cutoff frequency: 65.05133 Hz
+  Standard cutoff frequency: -0.5808228 Hz
   <br/>
   Acceptable tolerance of cutoff frequency: 0.01
   <br/>
   Acceptable lowest yield: 0.98
   <br/>
   <p>
-   This circuit design is acceptable. The estimated yield from simulation is 1.
+   This circuit design is acceptable. The estimated yield from simulation is 259.667684.
   </p>
   <p style="text-align:center;margin-bottom:1px;">
    Left Tail Probability Table
@@ -209,82 +209,82 @@
    <tbody>
     <tr>
      <td>
-      65.03084608871424
+      -0.5810146757767479
      </td>
      <td>
-      0.060
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.02973448667123
-     </td>
-     <td>
-      0.050
+      0.060000
      </td>
     </tr>
     <tr>
      <td>
-      65.02693493148874
+      -0.5810147744612477
      </td>
      <td>
-      0.040
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.02522582852811
-     </td>
-     <td>
-      0.030
+      0.050000
      </td>
     </tr>
     <tr>
      <td>
-      65.02373487100118
+      -0.5810448262843877
      </td>
      <td>
-      0.020
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.02161439839651
-     </td>
-     <td>
-      0.010
+      0.040000
      </td>
     </tr>
     <tr>
      <td>
-      65.02156127221494
+      -0.5810592404706127
      </td>
      <td>
-      0.008
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.01792882248913
-     </td>
-     <td>
-      0.006
+      0.030000
      </td>
     </tr>
     <tr>
      <td>
-      65.01748748138687
+      -0.5811075283012976
      </td>
      <td>
-      0.004
+      0.020000
      </td>
     </tr>
     <tr>
      <td>
-      65.01736489569319
+      -0.5811428925066036
      </td>
      <td>
-      0.002
+      0.010000
+     </td>
+    </tr>
+    <tr>
+     <td>
+      1.1390134393943412e+18
+     </td>
+     <td>
+      -25.858768
+     </td>
+    </tr>
+    <tr>
+     <td>
+      9.117393632091847e+18
+     </td>
+     <td>
+      -51.727537
+     </td>
+    </tr>
+    <tr>
+     <td>
+      3.0777151922793357e+19
+     </td>
+     <td>
+      -77.596305
+     </td>
+    </tr>
+    <tr>
+     <td>
+      7.296029965626558e+19
+     </td>
+     <td>
+      -103.465074
      </td>
     </tr>
    </tbody>
@@ -306,82 +306,82 @@
    <tbody>
     <tr>
      <td>
-      65.07419300133
+      -0.5806338043403027
      </td>
      <td>
-      0.060
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.074400043454
-     </td>
-     <td>
-      0.050
+      0.060000
      </td>
     </tr>
     <tr>
      <td>
-      65.075350200867
+      -1.4609490054712322e+24
      </td>
      <td>
-      0.040
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.07748079040127
-     </td>
-     <td>
-      0.030
+      0.050000
      </td>
     </tr>
     <tr>
      <td>
-      65.07916046484047
+      -1.1728380433032677e+25
      </td>
      <td>
-      0.020
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.08005519349138
-     </td>
-     <td>
-      0.010
+      0.040000
      </td>
     </tr>
     <tr>
      <td>
-      65.0800679732757
+      -3.962924197186196e+25
      </td>
      <td>
-      0.008
-     </td>
-    </tr>
-    <tr>
-     <td>
-      65.08080775948306
-     </td>
-     <td>
-      0.006
+      0.030000
      </td>
     </tr>
     <tr>
      <td>
-      65.0845452652355
+      -9.399048132947179e+25
      </td>
      <td>
-      0.004
+      0.020000
      </td>
     </tr>
     <tr>
      <td>
-      65.08626279255256
+      -0.5804938615303601
      </td>
      <td>
-      0.002
+      0.010000
+     </td>
+    </tr>
+    <tr>
+     <td>
+      -1.4677497027486036e+24
+     </td>
+     <td>
+      -25.858768
+     </td>
+    </tr>
+    <tr>
+     <td>
+      -1.1748810166445223e+25
+     </td>
+     <td>
+      -51.727537
+     </td>
+    </tr>
+    <tr>
+     <td>
+      -3.9659900400071075e+25
+     </td>
+     <td>
+      -77.596305
+     </td>
+    </tr>
+    <tr>
+     <td>
+      -9.401773941269225e+25
+     </td>
+     <td>
+      -103.465074
      </td>
     </tr>
    </tbody>
@@ -408,10 +408,10 @@
       Frequency
      </td>
      <td>
-      6.500254e+01
+      -5.813576e-01
      </td>
      <td>
-      6.509930e+01
+      -5.802959e-01
      </td>
     </tr>
     <tr>
@@ -419,10 +419,10 @@
       c1
      </td>
      <td>
-      1.900000e-09
+      2.100000e-09
      </td>
      <td>
-      2.100000e-09
+      1.900000e-09
      </td>
     </tr>
     <tr>
@@ -485,7 +485,7 @@
       ra
      </td>
      <td>
-      9.900000e+07
+      1.010000e+08
      </td>
      <td>
       9.900000e+07
@@ -496,7 +496,7 @@
       rb
      </td>
      <td>
-      1.010000e+00
+      9.900000e-01
      </td>
      <td>
       9.900000e-01
