--- a/src/config.ui
+++ b/src/config.ui
@@ -71,7 +71,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab1">
       <attribute name="title">
@@ -492,13 +492,7 @@
              </widget>
             </item>
             <item row="0" column="1">
-             <widget class="QComboBox" name="measnode">
-              <item>
-               <property name="text">
-                <string>out</string>
-               </property>
-              </item>
-             </widget>
+             <widget class="QComboBox" name="measnode"/>
             </item>
             <item row="1" column="0">
              <widget class="QLabel" name="label_3">
@@ -602,6 +596,11 @@
               <item>
                <property name="text">
                 <string>Cutoff Frequency</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Cutoff Frequency Phase</string>
                </property>
               </item>
               <item>
@@ -863,7 +862,7 @@
       <attribute name="title">
        <string>CMRR</string>
       </attribute>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -1054,6 +1053,11 @@
         </item>
        </layout>
       </widget>
+     </widget>
+     <widget class="QWidget" name="tab_2">
+      <attribute name="title">
+       <string>Op amp</string>
+      </attribute>
      </widget>
     </widget>
    </item>
